# webmedicalscheduler

./: .gitignore  README.md  docs.sh  mkdocs.yml  poetry_scripts.py  project.md  pyproject.toml  requirements.txt  run_build.py  run_build_pdf.py  run_deploy_version.py  run_serve.py
backend/: package-lock.json  package.json
backend/prisma/: dev.db  dev.db-journal  schema.prisma
backend/src/: index.ts  swagger.ts
backend/src/config/: cloudinary.config.ts
backend/src/middleware/: auth.middleware.ts  error.middleware.ts
backend/src/routes/: auth.routes.ts  doctor.routes.ts  patient.routes.ts
docs/: README.md  README_BG.md  docs_ganerate_command  index.md
docs/Backup/guides/: api-documentation.md  testing-guide.md
docs/api/: index.md
docs/api/backend/: index.md  patient.md
docs/api/frontend/: index.md
docs/architecture/: index.md
docs/backend/: components.md
docs/bg/architecture/: index.md
docs/bg/backend/: components.md
docs/bg/frontend/: components.md
docs/bg/security/: index.md
docs/bg/testing/: index.md
docs/css/: extra.css
docs/database/: schema.md
docs/deployment/: index.md
docs/frontend/: components.md
docs/guides/: database-schema.md  deployment-guide.md  developer-guide.md  documentation-guide.md  installation.md  user-guide.md
docs/security/: index.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/config/: api.config.ts
frontend/src/routes/: patient.routes.tsx
frontend/src/types/: appointment.ts  auth.ts  availability.ts  (+1 more)
(+47 files in other folders)
