[tool.poetry]
name = "medical-appointment-system-docs"
version = "1.0.0"
description = "Documentation for the Medical Appointment System"
authors = ["Medical Appointment Team <team@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"
pymdown-extensions = "^10.0"
mkdocs-minify-plugin = "^0.6.2"
mkdocs-pdf-export-plugin = "0.5.10"
weasyprint = "52.5"
pydyf = "0.5.0"
mike = "^1.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
